# yolov5DataSpliter

./: CMakeLists.txt  README.md  main.cpp
c++/backend/: Backend.cpp  Backend.h  filetransor.cpp  filetransor.h
qml/: Main.qml
qml/components/: DicSelector.qml  Part.qml
